gen/gmail/v1/cargo-errors.log
    Checking google-gmail1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/gmail/v1/lib)
error[E0412]: cannot find type `ListHistoryTypesItems` in module `crate::resources::users::history::params`
    --> gmail/v1/lib/src/lib.rs:4145:74
     |
4145 |                     Option<Vec<crate::resources::users::history::params::ListHistoryTypesItems>>,
     |                                                                          ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::users::history::params`

error[E0412]: cannot find type `ListHistoryTypesItems` in module `crate::resources::users::history::params`
    --> gmail/v1/lib/src/lib.rs:4163:71
     |
4163 |                         Vec<crate::resources::users::history::params::ListHistoryTypesItems>,
     |                                                                       ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::users::history::params`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-gmail1`.

To learn more, run the command again with --verbose.
